--- a/LXRCVFL Example using Storyboard/LXRCVFL Example using Storyboard/en.lproj/MainStoryboard.storyboard
+++ b/LXRCVFL Example using Storyboard/LXRCVFL Example using Storyboard/en.lproj/MainStoryboard.storyboard
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="wfC-9f-vtC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="wfC-9f-vtC">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Collection View Controller-->
         <scene sceneID="3Tg-sk-Lj5">
             <objects>
                 <collectionViewController autoresizesArchivedViewToFullSize="NO" id="wfC-9f-vtC" customClass="LXCollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="jt6-40-vJL">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="jt6-40-vJL">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.98039215800000001" green="0.98431372640000003" blue="0.98823529480000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zhp-KR-emn" customClass="LXReorderableCollectionViewFlowLayout">
                             <size key="itemSize" width="160" height="240"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -25,15 +31,16 @@
                                     <rect key="frame" x="0.0" y="0.0" width="160" height="240"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x0y-b3-mNF"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x0y-b3-mNF">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="240"/>
+                                        </imageView>
                                     </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="trailing" secondItem="hHT-aZ-3Ej" secondAttribute="trailing" type="default" id="HYf-sM-LHw"/>
-                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="bottom" secondItem="hHT-aZ-3Ej" secondAttribute="bottom" type="default" id="T6A-Kd-jNt"/>
-                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="leading" secondItem="hHT-aZ-3Ej" secondAttribute="leading" type="default" id="Xfi-lP-pht"/>
-                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="top" secondItem="hHT-aZ-3Ej" secondAttribute="top" type="default" id="kCg-O3-Z9J"/>
+                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="trailing" secondItem="hHT-aZ-3Ej" secondAttribute="trailing" id="HYf-sM-LHw"/>
+                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="bottom" secondItem="hHT-aZ-3Ej" secondAttribute="bottom" id="T6A-Kd-jNt"/>
+                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="leading" secondItem="hHT-aZ-3Ej" secondAttribute="leading" id="Xfi-lP-pht"/>
+                                    <constraint firstItem="x0y-b3-mNF" firstAttribute="top" secondItem="hHT-aZ-3Ej" secondAttribute="top" id="kCg-O3-Z9J"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="playingCardImageView" destination="x0y-b3-mNF" id="yUs-MF-rlD"/>
@@ -51,40 +58,8 @@
             <point key="canvasLocation" x="-230" y="0.0"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="LXCollectionViewController" superclassName="UICollectionViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LXCollectionViewController.h"/>
-        </class>
-        <class className="LXReorderableCollectionViewFlowLayout" superclassName="UICollectionViewFlowLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LXReorderableCollectionViewFlowLayout.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="PlayingCardCell" superclassName="UICollectionViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayingCardCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="playingCardImageView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
+        <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
